:sparkles: [REST API] Groups support on Device REST API resource
